librobinhood/include/robinhood/filter.h

/**
 * Filter operator
 *
 * There are two types of operators: comparison operators and logical operators.
 */
enum rbh_filter_operator {
    /* Comparison */
    RBH_FOP_EQUAL,
    RBH_FOP_STRICTLY_LOWER,
    RBH_FOP_LOWER_OR_EQUAL,
    RBH_FOP_STRICTLY_GREATER,
    RBH_FOP_GREATER_OR_EQUAL,
    RBH_FOP_REGEX,
    RBH_FOP_IN,
    RBH_FOP_EXISTS,
    RBH_FOP_BITS_ANY_SET,
    RBH_FOP_BITS_ALL_SET,
    RBH_FOP_BITS_ANY_CLEAR,
    RBH_FOP_BITS_ALL_CLEAR,

    /* Logical */
    RBH_FOP_AND,
    RBH_FOP_OR,
    RBH_FOP_NOT,

    /* Array */
    RBH_FOP_ELEMMATCH,

    /* Get */
    RBH_FOP_GET,

    /* Aliases (used to distinguish comparison filters from logical ones) */
    RBH_FOP_COMPARISON_MIN = RBH_FOP_EQUAL,
    RBH_FOP_COMPARISON_MAX = RBH_FOP_BITS_ALL_CLEAR,
    RBH_FOP_LOGICAL_MIN = RBH_FOP_AND,
    RBH_FOP_LOGICAL_MAX = RBH_FOP_NOT,
    RBH_FOP_ARRAY_MIN = RBH_FOP_ELEMMATCH,
    RBH_FOP_ARRAY_MAX = RBH_FOP_ELEMMATCH,
    RBH_FOP_GET_MIN = RBH_FOP_GET,
    RBH_FOP_GET_MAX = RBH_FOP_GET,
};
/**
 * A field on which to apply a filter
 */
struct rbh_filter_field {
    /** An fsentry property */
    enum rbh_fsentry_property fsentry;
    union {
        /** If \c fsentry is RBH_FP_STATX: a STATX_* or RBH_STATX_* macro */
        uint32_t statx;
        /** If \c fsentry is RBH_FP_*_XATTRS: NULL, or a string
         *
         * If NULL, the filter will be applied on the \c fsentry field itself.
         */
        const char *xattr;
    };
};
/**
 * A filter, to be used with rbh_backend_filter()
 *
 */
struct rbh_filter {
    enum rbh_filter_operator op;
    union {
        struct {
            struct rbh_filter_field field;
            struct rbh_value value;
        } compare;

        struct {
            const struct rbh_filter * const *filters;
            size_t count;
        } logical;

        struct {
            struct rbh_filter_field field;
            /** Should only be composed of comparison filters. The filter field
             * specified in them is irrelevant.
             */
            const struct rbh_filter * const *filters;
            size_t count;

            /*
             * When true, subfilters fields are used inside the array element
             * for an elemmatch query.
             */
            bool use_subfilters_fields;
        } array;

        struct {
            struct rbh_filter *filter;
            /**
             * Comparison filter of the fsentry to retrieve to finalize the
             * filter
             */
            const struct rbh_filter *fsentry_to_get;
            struct rbh_filter_field field;
        } get;
    };
};
/**
 * AND two dynamically allocated filters
 *
 * @param left  a pointer to a dynamically allocated struct rbh_filter
 * @param right a pointer to a dynamically allocated struct rbh_filter
 *
 * @return      a pointer to a newly allocated struct rbh_filter
 *
 * \p left and \p right should not be accessed anymore after this function is
 * called.
 *
 * Exit on error
 */
struct rbh_filter *
rbh_filter_and(struct rbh_filter *left, struct rbh_filter *right);
/**
 * OR two dynamically allocated filters
 *
 * @param left  a pointer to a dynamically allocated struct rbh_filter
 * @param right a pointer to a dynamically allocated struct rbh_filter
 *
 * @return      a pointer to a newly allocated struct rbh_filter
 *
 * \p left and \p right should not be accessed anymore after this function is
 * called.
 *
 * Exit on error
 */
struct rbh_filter *
rbh_filter_or(struct rbh_filter *left, struct rbh_filter *right);
/**
 * Negate a dynamically allocated filter
 *
 * @param filter    a pointer to a dynamically allocated struct rbh_filter
 *
 * @return          a pointer to a newly allocated struct rbh_filter
 *
 * \p filter should not be accessed anymore after this function is called.
 *
 * Exit on error
 */
struct rbh_filter *
rbh_filter_not(struct rbh_filter *filter);
/**
 * Validate a filter
 *
 * @param filter    the filter to validate
 *
 * @return          0 if \p filter is valid, -1 otherwise and errno is set
 *                  appropriately
 *
 * @error EINVAL    \p filter is invalid
 */
int
rbh_filter_validate(const struct rbh_filter *filter);